--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,37 +15,142 @@
     <header class="site_header">
         <div class="main_container">
             <div class="navigation_contanier">
-                <div class="logo">
-                    <a href="#Header_site"><img src="img/logo.png" alt="logo"></a>
-                    <nav>
-                        <a class="link" href="#portfolio">Портфолио</a>
-                        <a class="link" href="#rating">Рейтинг</a>
-                        <a class="link" href="#help">Помощь</a>
-                    </nav>
-                </div>
+                <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+                    <a class="navbar-brand" href="#NLK ">НЛК</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#portfolio" class="nav-link">Портфолио</a></li>
+                            <li class="nav-item"><a href="#rating" class="nav-link">Рейтинг</a></li>
+                            <li class="nav-item"><a href="#help" class="nav-link">Помощь</a></li>
+                        </ul>
+                    </div>
+
+                </nav>
             </div>
         </div>
     </header>
-    <section class="site__portfolio" id="portfolio">
-        <div class="main_contanier">
-            <h2 class="main_title" id="portfolio">Портфолио</h2>
-        </div>
-        <div class="text_section_1">
-            Это место, где собраны ваши научные публикации. Здесь вы можете добавлять свои научные работы, получать информацию об их уникальности и смотреть отзывы ваших научных руководителей
-        </div>
-        <div class="button1">
-            <button class="btn btn-primary">Добавить работу!</button>
-        </div>
-    </section>
-    <section class="stats__profil">
-        <form action="#profile">
-            <fieldset>
-                <legend>Ваш профиль</legend>
-                <label for="FIO">Сергей Павлович Флоров</label>
 
-            </fieldset>
-        </form>
+    <section class="site__portfolio jumbotron px-5 " id="portfolio ">
+        <div class="main_contanier ">
+            <h2 class="main_title " id="portfolio ">Портфолио</h2>
+        </div>
+        <div class="text_section_1 ">
+            <p class="lead ">Это место, где собраны ваши научные публикации. Здесь вы можете добавлять свои научные работы, получать информацию об их уникальности и смотреть отзывы ваших научных руководителей</p>
+        </div>
+        <div class="button1 ">
+            <button class="btn btn-primary ">Добавить работу!</button>
+        </div>
     </section>
+    <br>
+    <div class="col-lg-5 col-sm-7 pb-5 row px-5 mr-0 ">
+        <div class="card ">
+            <div class="card-header ">
+                Ваш профиль
+            </div>
+            <div class="card-body ">
+                <h5 class="card-title ">Сергей Павлович Флоров</h5>
+                <p class="card-text "><strong>Научная степень: </strong>Магистр.</p>
+                <p class="card-text "><strong>Специализация:</strong>Инвестиционные проблемы экономически развивающих рынков.</p>
+                <a href="# " class="btn btn-primary ">Редактировать</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 col-sm-5 pb-5 row px-5 mr-0">
+        <div class="card">
+            <div class="card-header ">
+                Ваша статистика
+            </div>
+            <div class="card-body ">
+                <p class="card-text "><strong>На платформе:</strong>2 года</p>
+                <p class="card-text "><strong>Добавлено работ:</strong>10.</p>
+                <p class="card-text "><strong>Средняя уникальность:</strong>75%.</p>
+                <p class="card-text "><strong>Языки работ:</strong>русский, английский.</p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="works px-5 pb-5 ">
+        <table class="table ">
+            <thead>
+                <tr>
+                    <th scope="col ">Название работы</th>
+                    <th scope="col ">Дата загрузки</th>
+                    <th scope="col ">Научный руководитель</th>
+                    <th scope="col ">Уникальность</th>
+                </tr>
+            </thead>
+            <tbody class="text-primary ">
+                <tr>
+                    <th>Привлечение инвестиций как фактор развития экономики</th>
+                    <td class="text-dark ">21.05.2019</td>
+                    <td>Асаншоева А.М.</td>
+                    <td>89%</td>
+                </tr>
+                <tr>
+                    <th>The role of accounting in sustainable development </th>
+                    <td class="text-dark ">11.02.2019</td>
+                    <td>Шаляпина В.С.</td>
+                    <td>78%</td>
+                </tr>
+                <tr>
+                    <th>Сценарный анализ как инструмент учета рисков инвестиционного проекта </th>
+                    <td class="text-dark ">05.09.2018</td>
+                    <td>Васильев М.Г.</td>
+                    <td>67%</td>
+                </tr>
+                <tr>
+                    <th>Глобальные и региональные инвестционные тенденции</th>
+                    <td class="text-dark ">09.07.2018</td>
+                    <td>Асаншова А.М.</td>
+                    <td>73%</td>
+                </tr>
+                <tr>
+                    <th>Systemic risks in financial markets</th>
+                    <td class="text-dark ">18.05.2018</td>
+                    <td>Леонидов В.Б.</td>
+                    <td>77%</td>
+                </tr>
+                <tr>
+                    <th>The infuence of tax regulation liberalisation on the domestic debt market </th>
+                    <td class="text-dark ">09.03.2018</td>
+                    <td>Шаляпина В.С.</td>
+                    <td>82%</td>
+                </tr>
+                <tr>
+                    <th>Биткоин как новый вид инвестиций</th>
+                    <td class="text-dark ">29.01.2018</td>
+                    <td>Асаншоева А.М.</td>
+                    <td>71%</td>
+                </tr>
+                <tr>
+                    <th>Проблема воспроизводства жилищного фонда в России</th>
+                    <td class="text-dark ">08.11.2017</td>
+                    <td>Васильев М.Г.</td>
+                    <td>65%</td>
+                </tr>
+                <tr>
+                    <th>Влияние безработицы на экономику СНГ</th>
+                    <td class="text-dark ">17.09.2017</td>
+                    <td>Васильев М.Г.</td>
+                    <td>68%</td>
+                </tr>
+                <tr>
+                    <th>Мировой валютный рынок Форекс</th>
+                    <td class="text-dark ">02.07.2017</td>
+                    <td>Васильев М.Г.</td>
+                    <td>67%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <footer>
+        <div class="footer mt-auto py-3 px-5 text-muted ">© Научный личный кабинет. Все права защищены
+        </div>
+    </footer>
 </body>
 
 </html>
